[gd_scene load_steps=2 format=2]

[ext_resource path="res://Ext/SlideList/SlideContainer.gd" type="Script" id=1]

[node name="SlideContainer" type="ViewportContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_SlideContainer_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SlideContainer_focus_exited"]
[connection signal="hide" from="." to="." method="_on_SlideContainer_hide"]
[connection signal="mouse_entered" from="." to="." method="_on_SlideContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SlideContainer_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_SlideContainer_visibility_changed"]
